--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 video {
 	display: block;
-	height: 100%;
+	/*height: 100%;*/
 	width: 100%;
 	-webkit-transform: scaleX(-1);
 	transform: scaleX(-1);
